<resources>
    <string name="app_name">Notes</string>
    <string name="subject">Subject</string>
    <string name="choose_color">Choose color</string>
    <string name="ok">OK</string>
    <string name="choose_your_note_color">Choose your note color</string>
    <string name="set_deadline">Set deadline</string>
    <string name="receive_notification">Receive notification</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="err_username_is_used">This username is already in use</string>
    <string name="err_incorrect_username_or_pass">Incorrect username or password!</string>
    <string name="err_required_fields">Title and context are required!</string>
    <string name="err_all_fields_are_required">Please, fill in all fields.</string>
    <string name="err_passwords_does_not_match">Your password and confirmation password do not match</string>
    <string name="err_date_not_set">Please, set the date and time for receiving notification.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="change_list_style">Change list style</string>
</resources>
