<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_change_style"
        android:icon="@drawable/table_icon"
        android:orderInCategory="100"
        android:title="@string/change_list_style"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add_icon"
        android:orderInCategory="200"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout_icon"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>