<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/note_title_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/widgets_bg"
            android:hint="@string/subject"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/background" />

        <com.dev.notes.view.custom.LinedEditText
            android:id="@+id/note_context_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/widgets_bg"
            android:imeOptions="actionNone"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxHeight="300dp"
            android:maxLength="200"
            android:maxLines="7"
            android:minHeight="80dp"
            android:padding="5dp"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/choose_color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/choose_your_note_color"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <View
                android:id="@+id/note_color_txt"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/widgets_bg" />

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/set_date_sw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/set_deadline"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/set_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/choose_date_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/date"
                android:textColor="@color/widgets_bg" />

            <Button
                android:id="@+id/choose_time_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/time"
                android:textColor="@color/widgets_bg" />

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/receive_notification_sw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/receive_notification"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:minWidth="140dp"
            android:text="@string/save"
            android:textColor="@color/widgets_bg" />

    </RelativeLayout>


</LinearLayout>